<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/id_check00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check00"
                android:visibility="gone"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check0"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check1"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check2"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check3"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check4"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check5"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check6"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check7"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check8"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check9"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check10"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check11"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check12"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check13"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check14"/>
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/id_check15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check15"/>
        </LinearLayout>
        </ScrollView>


</LinearLayout>
